force-app/main/default/objects/ssot__AccountContact__dlm/fields/Campagne_emailing__c.field-meta.xml
<CustomField>
    <fullName>Campagne_emailing__c</fullName>
    <label>Campagne emailing</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Campagne emailing</labelOverride>
        <masterLabel>Campagne emailing</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>