force-app/main/default/objects/ssot__AccountContact__dlm/fields/Date_de_la_derni_re_demande_Web__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_derni_re_demande_Web__c</fullName>
    <label>Date de la dernière demande Web</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Date de la dernière demande Web</labelOverride>
        <masterLabel>Date de la dernière demande Web</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>