force-app/main/default/objects/ssot__AccountContact__dlm/fields/Google_Analytics_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Google_Analytics_Campaign__c</fullName>
    <label>Google Analytics Campaign</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Google Analytics Campaign</labelOverride>
        <masterLabel>Google Analytics Campaign</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>