force-app/main/default/objects/ssot__AccountContact__dlm/fields/TECH_IsSignataire__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsSignataire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_IsSignataire</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>TECH_IsSignataire</labelOverride>
        <masterLabel>TECH_IsSignataire</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>